äkki nüüd hakkab uwsgi journald logimine tööle

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-plugin systemd_logger
-logger systemd
-#plugin python
+plugin = systemd_logger
+logger = systemd
+#plugin = python
 socket = /run/uwsgi/tunniplaan.arti.ee
 chdir = /srv/http/tunniplaan.arti.ee
 module = main
